--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -80,7 +80,7 @@
             </p>
         </div>
         
-<a href="https://wa.me/{{ product.store.whatsapp_number|urlencode }}?text=Hello! I'm interested in your product: {{ product.name }} (₦{{ product.price|floatformat:0 }})"
+<a href="https://wa.me/{{ product.store.whatsapp_number|urlencode }}?text=Hello!, I found you on Waap Folio and I'm interested in your product: {{ product.name }} (₦{{ product.price|floatformat:0 }})"
    class="btn btn-success btn-lg w-100 mt-4 shadow-sm"
    onclick="recordOrder('{{ product.store.id }}')">
    <i class="bi bi-whatsapp"></i> Order on WhatsApp
